backend/src/main/java/com/example/payment/error/exception/MerchantNotFoundException.java
package com.example.payment.error.exception;

public class MerchantNotFoundException extends Exception {
}
